--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator</title>
-</head>
 <body>
-  <h1>Dynamic Quote Generator</h1>
-
-  <!-- Quote display section -->
-  <div id="quoteDisplay">Click the button to see a quote!</div>
+  <div id="quoteDisplay"></div>
   <button id="newQuote">Show New Quote</button>
 
+  <!-- Category Filter -->
   <div>
-  <button id="exportJson">Export Quotes (JSON)</button>
-  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
-</div>
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+      <!-- Categories dynamically added here -->
+    </select>
+  </div>
 
-
-  <!-- Add new quote section -->
+  <!-- Add Quote Form -->
   <div id="addQuoteForm">
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button id="addQuoteBtn">Add Quote</button>
+    <button onclick="addQuote()">Add Quote</button>
+  </div>
+
+  <!-- JSON Import/Export -->
+  <div>
+    <button id="exportJson">Export Quotes (JSON)</button>
+    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
   </div>
 
   <script src="script.js"></script>
 </body>
-</html>
