--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,28 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dynamic Quote Generator with Sync</title>
+</head>
 <body>
+  <h1>Dynamic Quote Generator</h1>
+
   <div id="quoteDisplay"></div>
-  <button id="newQuote">Show New Quote</button>
 
-  <!-- Category Filter -->
-  <div>
-    <label for="categoryFilter">Filter by Category:</label>
-    <select id="categoryFilter" onchange="filterQuotes()">
-      <option value="all">All Categories</option>
-      <!-- Categories dynamically added here -->
-    </select>
-  </div>
+  <button onclick="displayRandomQuote()">Show New Quote</button>
 
-  <!-- Add Quote Form -->
-  <div id="addQuoteForm">
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button onclick="addQuote()">Add Quote</button>
-  </div>
+  <h2>Add a Quote</h2>
+  <form id="addQuoteForm" onsubmit="event.preventDefault(); addQuote();">
+    <input type="text" id="newQuoteText" placeholder="Enter quote" required />
+    <input type="text" id="newQuoteCategory" placeholder="Enter category" required />
+    <button type="submit">Add Quote</button>
+  </form>
 
-  <!-- JSON Import/Export -->
-  <div>
-    <button id="exportJson">Export Quotes (JSON)</button>
-    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
-  </div>
+  <h2>Filter Quotes</h2>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+  </select>
+
+  <h2>Import/Export Quotes</h2>
+  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  <button onclick="exportToJsonFile()">Export Quotes</button>
+
+  <h2>Sync with Server</h2>
+  <button onclick="syncWithServer()">Sync Now</button>
+  <div id="syncStatus"></div>
 
   <script src="script.js"></script>
 </body>
+</html>
